--- a/styles/variables.less
+++ b/styles/variables.less
@@ -483,10 +483,11 @@
 // ----------------------------------------
 @sand-picker-border-radius: 24px;
 @sand-picker-padding: 24px;
-@sand-picker-horizontal-button-height-small: 210px;
 @sand-picker-horizontal-button-border-radius: 130px;
-@sand-picker-value-height: 208px;
-@sand-picker-value-line-height: (@sand-picker-value-height / 2);
+@sand-picker-button-height: 210px;
+@sand-picker-valuewrapper-line-height: (@sand-picker-button-height / 2);
+@sand-picker-joined-valuewrapper-line-height: @sand-picker-button-height;
+
 
 // Popup
 // ---------------------------------------
